Added game area support in create game form

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,5 +10,7 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHzBSzavSY29YBL4mJE-oWbfPBdxluKYw&libraries=drawing&libraries=drawing" async defer></script>
 </body>
 </html>
